--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.1.1",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.828.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -36,6 +42,7 @@
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/sequelize": "^4.28.9",
@@ -47,7 +54,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "sequelize": "^6.3.5",
+    "sequelize": "^5.21.10",
+    "sequelize-cli": "^6.2.0",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
