--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.1.1",
     "@types/aws-sdk": "^2.7.0",
+    "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.828.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -35,7 +36,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "sequelize-typescript": "^1.1.0"
+    "sequelize-typescript": "^1.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
