--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.6.5",
+    "@nestjs/platform-socket.io": "^7.6.5",
     "@nestjs/sequelize": "^0.1.1",
+    "@nestjs/websockets": "^7.6.5",
     "@types/aws-sdk": "^2.7.0",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.828.0",
@@ -49,6 +51,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/sequelize": "^4.28.9",
+    "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
