--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "sequelize-typescript": "^1.1.0",
+    "socket.io-redis": "^6.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
