--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.6.5",
     "@nestjs/platform-socket.io": "^7.6.1",
     "@nestjs/sequelize": "^0.1.1",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/websockets": "^7.6.1",
     "@types/aws-sdk": "^2.7.0",
     "@types/uuid": "^8.3.0",
