--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.6.5",
     "@nestjs/platform-socket.io": "^7.6.1",
     "@nestjs/sequelize": "^0.1.1",
@@ -39,6 +40,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mysql2": "^2.2.5",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
@@ -53,6 +55,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^3.0.3",
     "@types/sequelize": "^4.28.9",
     "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
